[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-azure"
description = "Prefect integrations with Microsoft Azure services"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
keywords = ["prefect"]
authors = [{ name = "Prefect Technologies, Inc.", email = "help@prefect.io" }]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiohttp",
  "azure_identity>=1.10",
  "azure_mgmt_containerinstance>=10.0",
  "azure-mgmt-resource>=21.2",
  "prefect>=3.3.5",
  "prefect-docker>=0.6.2",
  "setuptools",                         #required in 3.12 to get pkg_resources (used by azureml.core)
]
dynamic = ["version"]

[project.optional-dependencies]
blob_storage = ["azure-storage-blob"]
cosmos_db = ["azure-cosmos"]
ml_datastore = ["azureml-core"]
all_extras = ["azure-cosmos", "azure-storage-blob", "azureml-core"]

[dependency-groups]
dev = [
  "aiohttp",
  "azure-cosmos",
  "azure-storage-blob",
  "azureml-core",
  "coverage",
  "interrogate",
  "mkdocs-gen-files",
  "mkdocs-material",
  "mkdocs",
  "mkdocstrings[python]",
  "mypy",
  "pillow",
  "pre-commit",
  "pytest-asyncio",
  "pytest >= 8.3",
  "pytest-env",
  "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/PrefectHQ/prefect/tree/main/src/integrations/prefect-azure"

[project.entry-points."prefect.collections"]
prefect_azure = "prefect_azure"

[tool.setuptools_scm]
version_file = "prefect_azure/_version.py"
root = "../../.."
tag_regex = "^prefect-azure-(?P<version>\\d+\\.\\d+\\.\\d+(?:[a-zA-Z0-9]+(?:\\.[a-zA-Z0-9]+)*)?)$"
fallback_version = "0.0.0"
git_describe_command = 'git describe --dirty --tags --long --match "prefect-azure-*[0-9]*"'

[tool.interrogate]
ignore-init-module = true
ignore_init_method = true
exclude = ["prefect_azure/_version.py", "tests"]
fail-under = 95
omit-covered-files = true

[tool.coverage.run]
omit = ["tests/*", "prefect_azure/_version.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
env = ["PREFECT_TEST_MODE=1"]

[tool.uv.sources]
prefect = { path = "../../../" }
prefect-docker = { path = "../prefect-docker" }
