[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "prefect>=3.7.0",
    "openlineage-python>=1.0.0",
]
name = "prefect-openlineage"
description = "Prefect integrations with the OpenLineage specification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache License 2.0" }
keywords = ["prefect"]
authors = [{ name = "Prefect Technologies, Inc.", email = "help@prefect.io" }]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "coverage",
    "interrogate",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pillow",
    "pre-commit",
    "pytest>=8.3",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/PrefectHQ/prefect/tree/main/src/integrations/prefect-openlineage"

[project.entry-points."prefect.collections"]
prefect_openlineage = "prefect_openlineage"

[tool.setuptools_scm]
version_file = "prefect_openlineage/_version.py"
root = "../../.."
tag_regex = "^prefect-openlineage-(?P<version>\\d+\\.\\d+\\.\\d+(?:[a-zA-Z0-9]+(?:\\.[a-zA-Z0-9]+)*)?)$"
fallback_version = "0.0.0"
git_describe_command = 'git describe --dirty --tags --long --match "prefect-openlineage-*[0-9]*"'
